--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
+  <meta name="google-site-verification" content="y8BGP1VNS8l7T7qyX6fVqRFe4rrJcA9pXe7WpKKKRww" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>WebBoost Studio - Creación de Páginas Web</title>
+  <title>Creación de Páginas Web (Bolivia-Mundo) </title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <style>
     /* Estilos generales */
@@ -557,3 +558,4 @@
   </a>
 </body>
 </html>
+
